--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "webpack-dev-server  --display-error-details --colors --content-base ./ --hot --host 0.0.0.0"
   },
   "dependencies": {
-    "mithril": "^0.2.0",
+    "body-parser": "^1.14.2",
+    "express": "^4.13.3",
+    "mithril": "^0.2.2-rc.1",
+    "mithril-node-render": "^0.4.1",
+    "msx": "^0.4.1",
     "request": "^2.67.0"
   },
   "devDependencies": {
