--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "json-server": "^0.8.4",
+    "marked": "^0.3.5",
     "mithril": "^0.2.2-rc.1",
     "mithril-node-render": "^0.4.1",
     "msx": "^0.4.1",
